--- a/store/index.html
+++ b/store/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div ng-controller="StoreController as store">
-        <h1>{{store.myproduct.name}}</h1>
-        <h2>${{store.myproduct.price}}</h2>
-        <p>{{store.myproduct.description}}</p>
+        <div ng-repeat="product in store.products" ng-hide="product.soldOut">
+            <h1>{{product.name}}</h1>
+            <h2>${{product.price}}</h2>
+            <p>{{product.description}}</p>
+            <button ng-show="product.canPurchase">Add to Cart</button>
+        </div>
     </div>
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
