--- a/gemStore.html
+++ b/gemStore.html
@@ -14,6 +14,14 @@
             <p>{{product.description}}</p>
             <button ng-show="product.canPurchase">Add to Cart</button>
         </div>
+        <li class="list-group">
+            <li class="list-group-item" ng-repeat="product in store.products">
+                <h3>
+                    {{product.name}}
+                    <em class="pull-right">{{product.price}}</em>
+                </h3>
+            </li>
+        </li>
     </div>
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
