--- a/gemStore.html
+++ b/gemStore.html
@@ -18,7 +18,8 @@
             <li class="list-group-item" ng-repeat="product in store.products">
                 <h3>
                     {{product.name}}
-                    <em class="pull-right">{{product.price}}</em>
+                    <em class="pull-right">{{product.price|currency}}</em>
+                    <img ng-src="{{product.images[0].full}}"/>
                 </h3>
             </li>
         </li>
