--- a/angularjsDevGuide/app/index.html
+++ b/angularjsDevGuide/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:ng="http://angularjs.org" ng-app>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular/app.js"></script>
+<script src="http://code.angularjs.org/snapshot/angular.js"></script>
+<script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
