--- a/angularjsDevGuide/app/index.html
+++ b/angularjsDevGuide/app/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    
+    <!-- a example of data binding -->
+    <div ng-app ng-init="qty =1; cost=2">
+        <b>Invoice:</b>
+        <div>
+            Quantity: <input type="number" min="0" ng-model="qty">
+        </div>
+        <div>
+            Costs: <input type="number" min="0" ng-model="cost">
+        </div>
+        <div><b>Total:</b> {{qty*cost|currency}}</div>
+    </div>
 <script src="http://code.angularjs.org/snapshot/angular.js"></script>
 <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
