--- a/angularjsDevGuide/app/index.html
+++ b/angularjsDevGuide/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org" ng-app>
+<html ng-app="invoice1">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +8,24 @@
 </head>
 <body>
     <!-- a example of data binding -->
-    <div ng-app ng-init="qty =1; cost=2">
+    <div ng-init="qty =1; cost=2" ng-controller="InvoiceController as invoice">
         <b>Invoice:</b>
         <div>
-            Quantity: <input type="number" min="0" ng-model="qty">
+            Quantity: <input type="number" min="0" ng-model="invoice.qty" required>
         </div>
         <div>
-            Costs: <input type="number" min="0" ng-model="cost">
+            Costs: <input type="number" min="0" ng-model="invoice.cost" required>
+            <select ng-model="invoice.inCurr">
+                <option ng-repeat="currency in invoice.currencies">{{currency}}</option>
+            </select>
         </div>
-        <div><b>Total:</b> {{qty*cost|currency}}</div>
+        <div><b>Total:</b> 
+         <span ng-repeat="currency in invoice.currencies">{{invoice.total(currency)|currency:currency}}
+         </span>
+         <button ng-click="invoice.pay()">Pay</button>
+        </div>
     </div>
-<script src="http://code.angularjs.org/snapshot/angular.js"></script>
-<script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
